<resources>
    <string name="app_name">SimpleLoginAppb</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="login_text">Login Page</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="atempts_text">Attempts:</string>
    <string name="button_text">Login</string>
    <string name="Second_page_text">Welcome to the Second Page!!</string>
    <string name="second_page_text">Second Page Bihh</string>
    <string name="fan_switch">fan</string>
    <string name="xText">X</string>
    <string name="yText">Y</string>
    <string name="zText">Z</string>
</resources>
